[gd_scene load_steps=13 format=2]

[ext_resource path="res://Witch/Heks_bagved_bord.png" type="Texture" id=1]
[ext_resource path="res://Witch/Heks_foran_bord.png" type="Texture" id=2]
[ext_resource path="res://Witch/heks_melt_2.png" type="Texture" id=3]
[ext_resource path="res://Witch/heks_melt_4.png" type="Texture" id=4]
[ext_resource path="res://Witch/heks_melt_5.png" type="Texture" id=5]
[ext_resource path="res://Witch/heks_melt_6.png" type="Texture" id=6]
[ext_resource path="res://Witch/heks_melt_3.png" type="Texture" id=7]
[ext_resource path="res://Witch/heks_melt_1.png" type="Texture" id=8]
[ext_resource path="res://Witch/Witch.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 7 ) ],
"loop": false,
"name": "melt",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "melt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28.7702, 50.4346 )

[node name="Witch" type="YSort"]
script = ExtResource( 9 )

[node name="upper" type="AnimatedSprite" parent="."]
position = Vector2( 0, 65.0473 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
offset = Vector2( 0, -220 )

[node name="buttom" type="AnimatedSprite" parent="."]
position = Vector2( 0, 59.5983 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 2 )
offset = Vector2( 0, -200 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 2.64148, -0.377357 )
shape = SubResource( 3 )
[connection signal="animation_finished" from="upper" to="." method="_on_upper_animation_finished"]
[connection signal="animation_finished" from="buttom" to="." method="_on_buttom_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
